# pathology_mllm_training

./: .gitignore  README.md  pyproject.toml
llava/: conversation.py
llava/model/: builder.py  llava_arch.py
llava/model/multimodal_encoder/: builder.py  coca_encoder.py
llava/model/multimodal_projector/: builder.py  coca_attentional_pooler.py
llava/train/: train.py
test_data/: data.json
